RESULTS/AutoSpec/raw_results/out-4o-sv-comp-mx/out/nested6_true-unreach-call_0006/nested6_true-unreach-call_merged.txt
/home/dimpling/AutoSpec/out/nested6_true-unreach-call_0006/nested6_true-unreach-call_merged.c:38:9: error: unterminated comment
   38 |         /*@;
      |         ^
